# metawear_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
docker/: Dockerfile  _main.launch  docker-compose.yml
launch/: main.launch
metawear_ros/: TODO.md  metawear_ros.py
msg/: CalibrationState.msg  Vibration.msg  VibrationPattern.msg
scripts/: metawear_node  metawear_node.py  metawear_ros.py
